# hydra

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
hydra/: cli.py  config.py  engine.py  export.py  guardrails.py  hardening.py  llm.py  target.py  types.py
hydra/agents/: base.py  classifier.py  defender.py  exfiltrator.py  injector.py  jailbreaker.py  mutator.py
tests/: conftest.py  test_agents.py  test_cli.py  test_engine.py  test_export.py  test_guardrails.py  test_hardening.py  test_llm.py
